@@ -1555,6 +1555,8 @@ POSSESS=\
 Skill    : POSSESS\n\r\
 Usage    : POSSESS [MOB NAME]\n\r\
 Example  : possess dragon\n\r\
+Example  : possess dragon@MyArea#23\n\r\
+Example  : possess dragon@MyArea\n\r\
 Short(s) : \n\r\
 This command will allow your character to possess and control \
 any given mob.  That mob will be controlled \
