@@ -1,7 +1,9 @@
 # Build 5.9.? Released ??/??/2016
    1. Apprentice now gets bonus common skill.
    2. Prop_ItemBinder can now bind to a group.
-   
+   3. POSSESS can now target a room or area
+   4. Can now edit recipes of Construction, Masonry, Excavation, Landscaping, etc from CL or MG
+   5.  
 # Build 5.9.1 Released 01/04/2016
    1. "Who accounts", used by an archon, can quickly list the account name of each player online.
    2. New Achievement event "GOTITEM", and new rewards (see new stats below and achievements.ini)
